@@ -51,6 +51,7 @@ setup(name = 'collective.solr',
         'Products.GenericSetup',
         'setuptools',
         'transaction',
+        'Unidecode',
         'ZODB3',
         'zope.component',
         'zope.formlib',
